tests/negative/neg_pr118c_invalid_binary_width.safe
package neg_pr118c_invalid_binary_width

   type nibble is binary (4)

